--- a/index.html
+++ b/index.html
@@ -5,36 +5,41 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aris Yuda Pratama</title>
+    <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body>
+    <nav class="navbar">
+        <div class="logo">
+            <a href="">AYP</a>
+        </div>
+        <div class="menu">
+            <a href="">Tentang</a>
+            <a href="">Portfolio</a>
+            <a href="">Kontak</a>
+        </div>
+    </nav>
+
     <div class="container">
-        <div class="section1">
-            <img src="img/aris.JPG" alt="Aris">
-            <h1>Hi, Saya Aris</h1>
-            <h3>Web Developer</h3>
-            <p>Di waktu luang saya menonton anime dan main game.</p>
-            <a href="mailto:arisyp26@gmail.com">Email Me!</a>
-        </div>
+            <section class="header">
+                <img src="img/aris.JPG" alt="Aris">
+                <h1>Aris Yuda Pratama</h1>
+                <h3>Web Developer</h3>
+            </section>
 
-        <div class="section2">
-            <h1>Apa yang bisa saya lakukan?</h1>
-            <div class="content">
-                <h3>Lorem ipsum dolor sit.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Blanditiis officiis consequatur eligendi
-                    sapiente! Nostrum, nisi culpa ipsa voluptates odio magnam?</p>
-            </div>
-            <div class="content">
-                <h3>Lorem, ipsum dolor.</h3>
-                <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Similique architecto nisi ipsa omnis aliquid laudantium aperiam. Qui, expedita quae nobis ipsum ut ipsam delectus?</p>
-            </div>
-        </div>
+            <section class="tentang">
+                <h1 class="judul">Tentang</h1>
+                <hr class="garis">
+                <div class="content">
+                    <img src="img/foto_tentang.jpeg" alt="Aris Yuda Pratama">
+                    <p>Nama saya Aris Yuda Pratama lulusan Universitas Muhammdiyah Malang 2020, jurusan Informatika. Saya asal Pasuruan, hobi nonton film, main billiard. Saya sangat suka dengan programming khususnya web programming. Keahlian saya menggunakan bahasa pemograman PHP, menggunakan framework CodeIgniter dan Laravel.</p>
+                </div>
+            </section>
 
-        <div class="section3">
-            <div class="content">
-                <h1>Content 3</h1>
-            </div>
-        </div>
+            <section class="portofolio">
+                <h1 class="judul">Portofolio</h1>
+                <hr class="garis">
+            </section>
 
     </div>
 
