mengatur grid pada portofolio

--- a/index.html
+++ b/index.html
@@ -46,7 +46,7 @@
                 <li><img src="img/1.png" alt=""></li>
                 <li><img src="img/2.png" alt=""></li>
                 <li><img src="img/1.png" alt=""></li>
-                <li><img src="img/2.png" alt=""></li>
+                <li><img src="img/2.png" alt=""></li>             
             </ul>
         </section>
 
@@ -73,7 +73,7 @@
             <ul>
                 <li><a href="https://instagram.com/arisyuda269" target="_blank"><img src="img/instagram.png" alt=""></a></li>
                 <li><a href="https://twitter.com/arisyuda269" target="_blank"><img src="img/twitter.png" alt=""></a></li>
-                <li><a href="https://facebook.com/arisyuda269" target="_blank"><img src="img/facebook.png" alt=""></a></li>
+                <li><a href="https://facebook.com/arisyp26" target="_blank"><img src="img/facebook.png" alt=""></a></li>
             </ul>
         </div>
         <p>&copy2020 Aris Yuda Pratama</p>
