--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Aris Yuda Pratama</title>
+    <link rel="shortcut icon" href="img/favicon.ico" type="image/x-icon">
     <link rel="stylesheet" href="css/style.css">
 </head>
 
 <body id="home">
     <nav class="navbar">
         <div class="logo">
-            <a href="#home">AYP</a>
+            <a href="#home">
+                <img src="img/favicon.ico" alt="AYP">
+            </a>
         </div>
         <div class="menu">
             <a href="#tentang">Tentang</a>
