menambahkan pengalaman dibagian tentang dan mengatur teks agar mengikuti objek

--- a/index.html
+++ b/index.html
@@ -35,10 +35,20 @@
             <hr class="garis">
             <div class="content">
                 <img src="img/foto_tentang.jpeg" alt="Aris Yuda Pratama">
-                <p>Nama saya Aris Yuda Pratama lulusan Universitas Muhammdiyah Malang 2020, jurusan Informatika. Saya
+                <p class="about">Nama saya Aris Yuda Pratama lulusan Universitas Muhammdiyah Malang 2020, jurusan
+                    Informatika. Saya
                     asal Pasuruan, hobi nonton film, main billiard. Saya sangat suka dengan programming khususnya web
                     programming. Keahlian saya menggunakan bahasa pemograman PHP, menggunakan framework CodeIgniter dan
                     Laravel.</p>
+
+                <div class="pengalaman">
+                    <p><span>2015-2020 :</span> Universitas Muhammadiyah Malang | Sarjana Komputer</p>
+                    <p><span>2019 :</span> Penyaji di “Seminar Nasional Teknologi dan Rekayasa”</p>
+                    <p><span>2019 :</span> Mengikuti pelatihan “Program Fresh Graduate Academy Digital Talent
+                        Scholarship”
+                        Diselenggarakan oleh KOMINFO</p>
+                    <p><span>2018 :</span> Magang di Software House Malang | Web Programmer</p>
+                </div>
             </div>
         </section>
 
@@ -49,7 +59,7 @@
                 <li><img src="img/1.png" alt=""></li>
                 <li><img src="img/2.png" alt=""></li>
                 <li><img src="img/1.png" alt=""></li>
-                <li><img src="img/2.png" alt=""></li>             
+                <li><img src="img/2.png" alt=""></li>
             </ul>
         </section>
 
@@ -68,14 +78,16 @@
                     <button type="submit">Kirim</button>
                 </form>
             </div>
-        </section>        
+        </section>
     </div>
 
     <footer>
         <div class="sosmed">
             <ul>
-                <li><a href="https://instagram.com/arisyuda269" target="_blank"><img src="img/instagram.png" alt=""></a></li>
-                <li><a href="https://twitter.com/arisyuda269" target="_blank"><img src="img/twitter.png" alt=""></a></li>
+                <li><a href="https://instagram.com/arisyuda269" target="_blank"><img src="img/instagram.png" alt=""></a>
+                </li>
+                <li><a href="https://twitter.com/arisyuda269" target="_blank"><img src="img/twitter.png" alt=""></a>
+                </li>
                 <li><a href="https://facebook.com/arisyp26" target="_blank"><img src="img/facebook.png" alt=""></a></li>
             </ul>
         </div>
