fitur responsive website

--- a/index.html
+++ b/index.html
@@ -42,12 +42,35 @@
                     Laravel.</p>
 
                 <div class="pengalaman">
-                    <p><span>2015-2020 :</span> Universitas Muhammadiyah Malang | Sarjana Komputer</p>
-                    <p><span>2019 :</span> Penyaji di “Seminar Nasional Teknologi dan Rekayasa”</p>
-                    <p><span>2019 :</span> Mengikuti pelatihan “Program Fresh Graduate Academy Digital Talent
-                        Scholarship”
-                        Diselenggarakan oleh KOMINFO</p>
-                    <p><span>2018 :</span> Magang di Software House Malang | Web Programmer</p>
+                    <div class="tahun">
+                        <span>2015 - 2020 :</span>
+                    </div>
+                    <div class="ket">
+                        <p>Universitas Muhammadiyah Malang | Sarjana Komputer</p>
+                    </div>
+
+                    <div class="tahun">
+                        <span class="bg">2019 :</span>
+                    </div>
+                    <div class="ket">
+                        <p class="bg">Penyaji di “Seminar Nasional Teknologi dan Rekayasa”</p>
+                    </div>
+
+                    <div class="tahun">
+                        <span>2019 :</span>
+                    </div>
+                    <div class="ket">
+                        <p>Mengikuti pelatihan “Program Fresh Graduate Academy Digital Talent Scholarship”
+                            Diselenggarakan oleh KOMINFO</p>
+                    </div>
+
+                    <div class="tahun">
+                        <span class="bg">2018 :</span>
+                    </div>
+                    <div class="ket">
+                        <p class="bg">Magang di Software House Malang | Web Programmer</p>
+                    </div>
+
                 </div>
             </div>
         </section>
